[package]
name = "resource_merger"
version = "0.1.2"
edition = "2024"
description = "Merge multiple Minecraft resource packs (directories or zip files/bytes) into a single zip where later packs overwrite earlier ones."
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourname/resource_merger"
keywords = ["minecraft", "resourcepack", "resource-packs", "zip", "merge"]
categories = ["compression", "command-line-utilities"]

[dependencies]
zip = "5.1.1"
walkdir = "2.3"
thiserror = "2.0.16"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"] }

[dev-dependencies]
anyhow = "1.0"
