[package]
name = "resource_merger"
version = "0.1.4"
edition = "2021"
description = "Merge multiple Minecraft resource packs (directories or zip files/bytes) into a single zip where later packs overwrite earlier ones."
readme = "README.md"
license = "MIT"
repository = "https://github.com/LuckyLuuk12/resource_merger"
keywords = ["minecraft", "resourcepack", "resource-packs", "zip", "merge"]
categories = ["compression", "command-line-utilities"]

[dependencies]
zip = "5.1.1"
walkdir = "2.3"
thiserror = "2.0.16"
clap = { version = "4.5.48", features = ["derive"] }
tempfile = "3"
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"] }
serde_json = "1.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.100"
